Added Footer and copyright

--- a/resume.html
+++ b/resume.html
@@ -21,5 +21,10 @@
         </nav>
     </header>
 
+
+    <footer style="text-align: center;">
+        <p>&copy; 2024 Raj Kumar Nepal | <a href="https://merocms.com" target="_blank" rel="noopener noreferrer">MeroCMS</a></p>
+    </footer>
+
 </body>
 </html>l
