Added Meta Tags

--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Resume of Raj Kumar Nepal, an experienced Cloud Engineer.">
+    <meta name="author" content="Raj Kumar Nepal">
+    <meta name="keywords" content="resume, CV, Cloud Engineer, AWS, Azure, DevOps">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="en">
+    <meta http-equiv="Content-Style-Type" content="text/css">
+    <meta http-equiv="Content-Script-Type" content="text/javascript">
+    <meta http-equiv="Cache-Control" content="no-cache">
     <title>Raj Kumar Nepal's Resume</title>
 </head>
 <body>
