Added Summary Section

--- a/resume.html
+++ b/resume.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Resume of Raj Kumar Nepal, an experienced Cloud Engineer.">
     <meta name="author" content="Raj Kumar Nepal">
-    <meta name="keywords" content="resume, CV, Cloud Engineer, AWS, Azure, DevOps">
+    <meta name="keywords" content="Resume, CV, Cloud Engineer, AWS, Azure, DevOps">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
     <meta http-equiv="Cache-Control" content="no-cache">
     <title>Raj Kumar Nepal's Resume</title>
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -29,10 +31,24 @@
         </nav>
     </header>
 
+    <section id="home">
+        <h1>Raj Kumar Nepal</h1>
+        <p>Cloud Engineer</p>
+    </section>
+
+    <section id="summary">
+        <h2 aria-labelledby="summary-heading">Summary</h2>
+        <p>
+            Cloud Engineer with over 5 years of experience in designing and implementing innovative cloud solutions that drive business transformation.
+            Proven track record in optimizing cloud architecture, resulting in a 30% reduction in operational costs while enhancing system performance and scalability.
+            Proficient in leveraging AWS and Azure platforms, with extensive experience in deploying CI/CD pipelines and automating workflows to accelerate development cycles.
+            Strong background in collaborating with cross-functional teams to deliver high-quality projects on time.
+            Committed to continuous learning and staying current with industry trends and technologies to provide effective solutions that meet evolving business needs.
+        </p>
+    </section>
 
     <footer style="text-align: center;">
         <p>&copy; 2024 Raj Kumar Nepal | <a href="https://merocms.com" target="_blank" rel="noopener noreferrer">MeroCMS</a></p>
     </footer>
-
 </body>
-</html>l
+</html>
