--- a/resume.html
+++ b/resume.html
@@ -23,8 +23,6 @@
                 <li><a href="#summary">Summary</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -99,6 +97,31 @@
             <p>Mount Everest Higher Secondary English School, Bara, Nepal</p>
             <p>Year: 2013-2015</p>
         </section>
+    </section>
+
+    <section id="certifications" aria-labelledby="certifications">
+        <h2 id="certifications-heading" aria-labelledby="certifications-heading">Certifications</h2>
+        <ul>
+            <li>AWS Certified Solutions Architect - Associate</li>
+            <li>Azure Administrator Associate</li>
+            <li>Google Cloud Professional Cloud Architect</li>
+        </ul>
+    </section>
+
+    <section id="portfolio" aria-labelledby="portfolio">
+        <h2 id="gallery-heading" aria-labelledby="portfolio-heading">Gallery</h2>
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 1">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 2">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 3">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 4">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 5">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 6">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 7">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 8">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 9">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 10">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 11">
+        <img src="https://via.placeholder.com/200" alt="Gallery Image 12">
     </section>
 
     <footer style="text-align: center;">
