Error Solved Portfolio Section

--- a/resume.html
+++ b/resume.html
@@ -109,7 +109,7 @@
     </section>
 
     <section id="portfolio" aria-labelledby="portfolio">
-        <h2 id="gallery-heading" aria-labelledby="portfolio-heading">Gallery</h2>
+        <h2 id="gallery-heading" aria-labelledby="portfolio-heading">Portfolio</h2>
         <img src="https://via.placeholder.com/200" alt="Gallery Image 1">
         <img src="https://via.placeholder.com/200" alt="Gallery Image 2">
         <img src="https://via.placeholder.com/200" alt="Gallery Image 3">
