Added Form  Section

--- a/resume.html
+++ b/resume.html
@@ -124,6 +124,25 @@
         <img src="https://via.placeholder.com/200" alt="Gallery Image 12">
     </section>
 
+    <section id="contact" aria-labelledby="contact-heading">
+        <h2 id="contact-heading">Contact Me</h2>
+        <p id="contact-message">Feel free to reach out to me for any inquiries or opportunities.</p>
+        <form action="#">
+            <label for="name">Name:</label><br/>
+            <input type="text" id="name" name="name" placeholder="Full Name" required><br><br>
+            <label for="email">Email:</label><br/>
+            <input type="email" id="email" name="email" placeholder="user@domain.com" required><br><br>
+            <label for="phone">Phone:</label><br/>
+            <input type="tel" id="phone" name="phone" placeholder="+977-98xxxxxxxx" required><br><br>
+            <label for="subject">Subject:</label><br/>
+            <input type="text" id="subject" name="subject" placeholder="Subject" required><br><br>
+            <label for="message">Message:</label><br/>
+            <textarea id="message" name="message" rows="8" placeholder="Your Message Here..." required></textarea><br><br>
+            <input type="submit" value="Submit">
+        </form>
+    </section>
+
+
     <footer style="text-align: center;">
         <p>&copy; 2024 Raj Kumar Nepal | <a href="https://merocms.com" target="_blank" rel="noopener noreferrer">MeroCMS</a></p>
     </footer>
