Edited css filename and link in resume

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <title>Raj Kumar Nepal's Resume</title>
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/resume.css">
 </head>
 <body>
     <header aria-labelledby="header">
