Added store header

--- a/store.html
+++ b/store.html
@@ -6,6 +6,19 @@
     <title>Introducing E-store</title>
 </head>
 <body>
+    <header id="header" aria-labelledby="header">
+        <nav aria-labelledby="nav">
+            <div class="logo">E-Store</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#cart">Cart</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     
 </body>
 </html>
